--- a/app/views/bloggers/show.html.erb
+++ b/app/views/bloggers/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @blogger.name%></h1>
 Total Likes: <%= @blogger.total_likes %><br></br>
-Link to featured post: <br></br>
+Link to featured post: <%= @blogger.most_liked_post[0].title %> <br></br>
 Top 5 written about destinations: <br></br>
