--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,7 @@
 <h1>Posts#edit</h1>
 <p>Find me in app/views/posts/edit.html.erb</p>
+
+
+<%= render partial: "partials/error_list", locals: {new_object: @post} %>
+
+<%= render "partials/post_form" %>
