--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
 
+<%= render partial: "partials/error_list", locals: {new_object: @post} %>
 
-<%= render "partials/post_form" %> 
+<%= render "partials/post_form" %>
